# Trainee_qa_auto

./: .gitignore  pyproject.toml
tests/: tests.py  tests_most_popular_programming_language.py
trainee_qa_auto/: parse_table.py
